[workspace]
resolver = "2"

members = [
    "day01",
    "day02",
    "day03",
    "day04",
    "day05",
    "day06",
    "day07",
    "day08",
    "day09",
    "day10",
    "day11",
    "day12",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Advent of Code 2025"]

[workspace.dependencies]
itertools = "0.14.0"